Fix issue table of contents alignment

--- a/_sass/_issue.scss
+++ b/_sass/_issue.scss
@@ -212,7 +212,7 @@
 
         div.details {
           display: block;
-          margin-left: 1.5em;
+          margin-left: 3em;
           vertical-align: top;
 
           span.title {
